<resources>
    <string name="about_feedex">About FeedEx</string>
    <string name="welcome_title">Welcome to FeedEx. Would you like to add one feed?</string>
    <string name="never">never</string>
    <string name="update">Update</string>
    <string name="colon">:\u00A0</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_all_read">Mark all as read</string>
    <string name="feedex_feeds">FeedEx feeds</string>
    <string name="error">Error</string>
    <string name="network_error">The network is not set up</string>
    <string name="loading">Loading…</string>
    <string name="no_result">No result</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="back_again_to_quit">Press back once more to exit</string>
    <string name="feeds">Feeds</string>
    <string name="menu_add_feed">Add feed</string>
    <string name="no_feeds">No feeds</string>
    <string name="no_filters">No rules</string>
    <string name="context_menu_delete">Delete</string>
    <string name="edit_feed_title">Edit feed</string>
    <string name="menu_edit_feeds">Edit feeds</string>
    <string name="new_feed_title">New feed</string>
    <string name="context_menu_edit">Edit</string>
    <string name="menu_add_group">Add group</string>
    <string name="menu_import">Import from OPML</string>
    <string name="menu_export">Export to OPML</string>
    <string name="error_feed_error">The feed address could not accessed.</string>
    <string name="error_feed_process">The feed can not be processed.</string>
    <string name="error_feed_url_exists">The address already exists.</string>
    <string name="error_feed_import">The selected file could not be imported.</string>
    <string name="error_feed_export">The export has failed. Make sure you have a writable SD-card
        mounted.
    </string>
    <string name="error_external_storage_not_available">The external storage (e.g. SD-card) is not
        available.
    </string>
    <string name="feed_url">URL address</string>
    <string name="optional">(optional)</string>
    <string name="website_or_feed">(website or feed)</string>
    <string name="tab_feed_title">Feed</string>
    <string name="tab_filters_title">Filter</string>
    <string name="feed_title">TITLE</string>
    <string name="feed_filters">FILTER RULES</string>
    <string name="filter_add_title">Add rule</string>
    <string name="filter_delete_title">Delete rule</string>
    <string name="filter_edit_title">Edit rule</string>
    <string name="filter_is_regex">is a regular expression</string>
    <string name="filter_apply_to_title">Apply to title</string>
    <string name="filter_apply_to_content">Apply to content</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="feed_search">Feed search</string>
    <string name="feed_search_by_web_search">Find feed by key words</string>
    <string name="feed_search_by_topic">Generate feed by topic (via Faroo)</string>
    <string name="feed_search_by_youtube">Find feed by Youtube channel name</string>
    <string name="select_file">Select file (SD-root)</string>
    <string name="question_delete_feed">Do you really want to delete this feed?</string>
    <string name="question_delete_group">Do you really want to delete this group and all of its
        feeds?
    </string>
    <string name="question_delete_filter">Do you really want to delete this filter?</string>
    <string name="add_group_title">Select group name</string>
    <string name="edit_group_title">Edit group name</string>
    <string name="message_exported_to">Exported into %s.</string>
    <string name="to_group_title">Feed move action</string>
    <string name="to_group_message">You can either put this feed into or above this group. What do
        you want to do?
    </string>
    <string name="to_group_above">Above the group</string>
    <string name="to_group_into">Into the group</string>
    <string name="add_custom_feed">Add a custom feed or search for one</string>
    <string name="google_news_title">Google News topics</string>
    <string name="google_news_indicator">Select one or several topics to add. Some of them may not be provided by Google for your language.</string>
    <string name="google_news_top_stories">Top Stories</string>
    <string name="google_news_world">World</string>
    <string name="google_news_business">Business</string>
    <string name="google_news_technology">Technology</string>
    <string name="google_news_entertainment">Entertainment</string>
    <string name="google_news_sports">Sports</string>
    <string name="google_news_science">Science</string>
    <string name="google_news_health">Health</string>
    <string name="all">Entries</string>
    <string name="no_entries">No entries</string>
    <string name="favorites">Starred</string>
    <string name="context_menu_hide_read">Hide read entries</string>
    <string name="context_menu_show_read">Show read entries</string>
    <string name="context_menu_share_starred">Share starred entries</string>
    <string name="menu_star">Star</string>
    <string name="menu_unstar">Unstar</string>
    <string name="menu_share">Share</string>
    <string name="menu_full_screen">Full screen</string>
    <string name="menu_copy_clipboard">Copy link</string>
    <string name="menu_mark_as_unread">Mark as unread</string>
    <string name="share_favorites_title">FeedEx: starred entries</string>
    <string name="copied_clipboard">Link copied</string>
    <string name="get_full_text">Retrieve the full text</string>
    <string name="original_text">Show original text</string>
    <string name="see_enclosure">See enclosure</string>
    <string name="see_link">See in browser</string>
    <string name="cant_open_link">No application found for this link</string>
    <string name="open_enclosure">Open enclosure</string>
    <string name="file">File</string>
    <string name="download_and_save">Download and save</string>
    <string name="open_link">Open link</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="transparency">Transparency</string>
    <string name="settings_category_refresh">Automated refresh</string>
    <string name="settings_refresh_enabled">Enable automatic refresh</string>
    <string name="settings_refresh_enabled_description">Enable the automatic refresh of feeds
    </string>
    <string name="settings_refresh_interval">Refresh interval</string>
    <string name="settings_refresh_interval_description">Interval between two automated refreshes
    </string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_notifications_enabled">Enable notifications</string>
    <string name="settings_notifications_enabled_description">Enable notifications in case of new
        entries
    </string>
    <string name="settings_notifications_ringtone">Ringtone</string>
    <string name="settings_notifications_ringtone_description">Select a ringtone that will be played
        on new entries
    </string>
    <string name="settings_notifications_vibrate">Vibrate</string>
    <string name="settings_notifications_vibrate_description">Enable the vibration on new entries
    </string>
    <string name="settings_category_content_presentation">Content presentation</string>
    <string name="settings_lighttheme">Light theme</string>
    <string name="settings_lighttheme_description">Use the light theme</string>
    <string name="settings_keep_time">Time that the entries will be kept</string>
    <string name="settings_keep_time_description">The entries that are older than the given date
        will be deleted
    </string>
    <string name="settings_disable_pictures">Disable pictures</string>
    <string name="settings_disable_pictures_description">Do not show and load any pictures</string>
    <string name="settings_fetch_pictures">Download pictures</string>
    <string name="settings_fetch_pictures_description">Download all pictures and store them
        locally
    </string>
    <string name="settings_font_size">Text size</string>
    <string name="settings_font_size_description">Text size for entries content display</string>
    <string name="settings_display_oldest_first">Entries order</string>
    <string name="settings_display_oldest_first_description">Display oldest entries first</string>
    <string name="settings_display_entries_fullscreen">Fullscreen entries</string>
    <string name="settings_display_entries_fullscreen_description">Display entries in fullscreen</string>
    <string name="settings_refresh_on_open">Refresh feeds on open</string>
    <string name="settings_refresh_on_open_description">Refreshes all feeds after opening the
        application
    </string>
    <string name="settings_refresh_wifi_only">Refresh only with Wifi</string>
    <string name="settings_refresh_wifi_only_description">Automatic refresh will be done if when the
        wifi is enabled
    </string>
    <string name="settings_visible_feeds">Visible feeds</string>
    <string name="settings_widget_background">Background</string>
    <string name="settings_widget_background_description">Color and transparency of the widget
        background
    </string>
    <string name="all_feeds">All feeds (incl. future)</string>
    <string name="settings_screen_proxy">Proxy</string>
    <string name="settings_category_network">Network</string>
    <string name="settings_proxy_enabled">Enabled</string>
    <string name="settings_proxy_wifi_only">Wifi only</string>
    <string name="settings_proxy_wifi_only_description">Use Proxy only for wifi</string>
    <string name="settings_proxy_host">Host</string>
    <string name="settings_proxy_port">Port</string>
    <string name="settings_proxy_type">Type</string>
    <plurals name="number_of_new_entries">
        <item quantity="one">One new entry</item>
        <item quantity="other">%d new entries</item>
    </plurals>
    <string-array name="settings_intervals">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="settings_keep_times">
        <item>1 day</item>
        <item>2 days</item>
        <item>4 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>Forever</item>
    </string-array>
    <string-array name="settings_font_sizes">
        <item>-2</item>
        <item>-1</item>
        <item>Standard</item>
        <item>+1</item>
        <item>+2</item>
        <item>+3</item>
    </string-array>
</resources>