<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_hide_read"
        android:icon="@drawable/hide_reads"
        android:showAsAction="ifRoom|withText"
        android:title="@string/context_menu_hide_read"/>
    <item
        android:id="@+id/menu_share_starred"
        android:icon="@drawable/social_share"
        android:showAsAction="ifRoom|withText"
        android:title="@string/context_menu_share_starred"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/refresh"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_all_read"
        android:icon="@drawable/read_all"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_all_read"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/action_settings"
        android:title="@string/menu_settings"/>

</menu>