<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_star"
        android:icon="@drawable/rating_not_important"
        android:showAsAction="always|withText"
        android:title="@string/menu_star"/>

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/social_share"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_share"/>
    
    <item
        android:id="@+id/menu_copy_clipboard"
        android:icon="@drawable/content_copy"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_copy_clipboard"/>
    
    <item
        android:id="@+id/menu_mark_as_unread"
        android:title="@string/menu_mark_as_unread"/>
</menu>