<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_hide_read_main"
        android:icon="@drawable/hide_reads"
        android:title="@string/context_menu_hide_read"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_refresh_main"
        android:icon="@drawable/refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_edit_main"
        android:icon="@drawable/content_edit"
        android:title="@string/menu_edit_feeds"
        app:showAsAction="ifRoom"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_settings_main"
        android:icon="@drawable/action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom"
        tools:ignore="AlwaysShowAction" />
</menu>