<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <net.fred.feedex.widget.ColorPickerDialogPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:dialogLayout="@layout/color_transparency_picker"
        android:key="widget.background"
        android:negativeButtonText="@android:string/cancel"
        android:positiveButtonText="@android:string/ok"
        android:summary="@string/settings_widget_background_description"
        android:title="@string/settings_widget_background" />

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:key="widget.visiblefeeds"
        android:title="@string/settings_visible_feeds" />

</PreferenceScreen>