<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <item
            android:id="@+id/menu_refresh"
            android:icon="@drawable/refresh"
            android:showAsAction="always|withText"
            android:title="@string/menu_refresh"/>
        
        <item
            android:id="@+id/menu_mark_as_read"
            android:icon="@drawable/view_reads"
            android:showAsAction="always|withText"
            android:title="@string/context_menu_mark_as_read"/>
        
        <item
            android:id="@+id/menu_edit"
            android:icon="@drawable/content_edit"
            android:showAsAction="always|withText"
            android:title="@string/context_menu_edit"/>
        
        <item
            android:id="@+id/menu_delete"
            android:icon="@drawable/content_discard"
            android:showAsAction="always|withText"
            android:title="@string/context_menu_delete"/>

</menu>